[package]
name = "exo-colony"
version = "0.1.0"
authors = ["Igal Alkon <igal.alkon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
rand = "0.7.3"
chrono = "0.4"
itertools = "0.10"
worldgen = "0.5.3"
encode_unicode = "0.3.6"