[package]
name = "exo-colony"
version = "0.1.0"
authors = ["Igal Alkon <igal.alkon@gmail.com>"]
edition = "2021"
description = "A real-time simulation game about building a colony on an exo-planet for terminal lovers."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
termion = "4.0.0"
tui = { version = "0.19.0", default-features = true, features = ['crossterm', 'termion'] }
rand = "0.8"
chrono = "0.4"
itertools = "0.13.0"
worldgen = "0.5"
encode_unicode = "1.0.0"